--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.21)
+'cmake_minimum_required(VERSION 3.21)
 project(vulkan)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(vulkan src/main.cpp src/utility_shader.cpp include/utility_shader.h include/stb_image.h)
+add_executable(vulkan src/main.cpp src/utility_shader.cpp include/stb_image.h include/utility_shader.h include/tiny_obj_loader.h)
 
 include_directories(/usr/local/include/ ./include/)
 
